<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="homeTile">Tic Tac Toe</string>
    <string name="playButton">Play</string>
    
    <string name="PlayerSetupTitle">Enter Your Name</string>
    <string name="Label1">Player 1</string>
    <string name="Label2">Player 2</string>
    <string name="SubmitButton">SUBMIT NAMES</string>
    <string name="NameHint">Enter Your Name</string>
    
    <string name="playAgainButton">Play Again</string>
    <string name="homeButton">Home</string>

</resources>